220620 gitHub repository 생성 클론코딩 수정 (main > height, header input > padding)

--- a/gitHub/index.html
+++ b/gitHub/index.html
@@ -60,7 +60,7 @@
                             <input type="text" id="Repository name">
                         </div>
                     </div>
-                    <div>
+                    <div class="reco_in">
                         <p class="recommend">Great repository names are short and memorable. Need inspiration? How about curly-winner?</p>
                         <div class="Description">
                             <label for="Description">Description (optional)</label>
@@ -147,5 +147,6 @@
             </ul>
         </footer>
     </div>
+    <script src="js/git.js"></script>
 </body>
 </html>
