220621 gitHub repository 생성 클론코딩 수정 (span > underline js 및 menu mouseover mouseout js 추가)

--- a/gitHub/index.html
+++ b/gitHub/index.html
@@ -13,18 +13,16 @@
         <!-- header -->
         <header>
             <div class="logo_group">
-                <h1>
-                    <img src="images/logo.PNG">
-                </h1> 
+                <img src="images/logo.PNG"> 
                 <div class="na_group">
                         <input type="text" name="" id="" placeholder="Search or jump to...">
                         <img src="images/search.png" alt="" class="search">
                     <nav>
                         <ul class="menu">
-                            <li>Pull requests</li>
-                            <li>Isseus</li>
-                            <li>Marketplace</li>
-                            <li>Explore</li>
+                            <li class="menu_over">Pull requests</li>
+                            <li class="menu_over">Isseus</li>
+                            <li class="menu_over">Marketplace</li>
+                            <li class="menu_over">Explore</li>
                         </ul>
                     </nav>
                 </div>
@@ -41,7 +39,7 @@
                     </h1>
                     <p>
                         A repository contains all project files, including the revision history. Already have a project repository elsewhere?
-                        <span class="import">Import a repository.</span>
+                        <span class="import span_tag">Import a repository.</span>
                     </p>
                     <hr>
                 </div>
@@ -53,15 +51,15 @@
                             <select name="" id="">
                                 <option value="UserName">dj04304</option>
                             </select>
+                            <span class="slash">/</span>
                         </div>
-                        <span class="slash">/</span>
                         <div class="Repository_name">
                             <label for="Repository name">Repository name</label>
                             <input type="text" id="Repository name">
                         </div>
                     </div>
                     <div class="reco_in">
-                        <p class="recommend">Great repository names are short and memorable. Need inspiration? How about curly-winner?</p>
+                        <p class="recommend">Great repository names are short and memorable. Need inspiration? How about&nbsp;<span>silver-happiness?</span></p>
                         <div class="Description">
                             <label for="Description">Description (optional)</label>
                             <input type="text" id="Description">
@@ -102,18 +100,18 @@
                     <div class="add">
                         <input type="checkbox">
                         <label for="">Add a README file</label>
-                        <p>This is where you can write a long description for your project. <span>Learn more.</span></p>
+                        <p>This is where you can write a long description for your project. <span class="span_tag">Learn more.</span></p>
                     </div>
                     <div class="gitignore">
                         <h4>Add .gitignore</h4>
-                        <p>Choose which files not to track from a list of templates. <span>Learn more.</span></p>
+                        <p>Choose which files not to track from a list of templates. <span class="span_tag">Learn more.</span></p>
                         <select name="" id="">
                             <option value=".gitignore template" selected>.gitignore template</option>
                         </select>
                     </div>
                     <div class="license">
                         <h4>Choose a license</h4>
-                        <p>A license tells others what they can and can't do with your code. <span>Learn more.</span></p>
+                        <p>A license tells others what they can and can't do with your code. <span class="span_tag">Learn more.</span></p>
                         <select name="" id="">
                             <option value="License">License:</option>
                         </select>
@@ -133,17 +131,17 @@
         <footer>
             <img src="images/footer_img.png" alt="">
             <ul class="address">
-                <li>Terms</li>
-                <li>Privacy</li>
-                <li>Security</li>
-                <li>Status</li>
-                <li>Docs</li>
-                <li>Contact GitHub</li>
-                <li>Pricing</li>
-                <li>API</li>
-                <li>Training</li>
-                <li>Blog</li>
-                <li>About</li>
+                <li class="span_tag">Terms</li>
+                <li class="span_tag">Privacy</li>
+                <li class="span_tag">Security</li>
+                <li class="span_tag">Status</li>
+                <li class="span_tag">Docs</li>
+                <li class="span_tag">Contact GitHub</li>
+                <li class="span_tag">Pricing</li>
+                <li class="span_tag">API</li>
+                <li class="span_tag">Training</li>
+                <li class="span_tag">Blog</li>
+                <li class="span_tag">About</li>
             </ul>
         </footer>
     </div>
